# sumpy

./: .gitignore  .gitlab-ci.yml  .pylintrc-local.yml  .test-conda-env-py3-requirements.txt  .test-conda-env-py3.yml  .test-py2-requirements.txt  .test-py2.yml  .test-py3.yml  CITATION.cff  MANIFEST.in  MEMO  README.rst  S_on_surface_convergence.pgf  asv.conf.json  azure-pipelines.yml  fmm.py  hello.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_stokes.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
.pytest_cache/v/cache/: lastfailed
andreas/: direct-gen.py  p2m-gen.py
benchmarks/: bench_translations.py  run_asv.sh
contrib/translations/: PDE-reduction and translations.ipynb  PDE-reduction-symbolic.ipynb
doc/: Makefile  codegen.rst  conf.py  eval.rst  expansion-notes.tex  expansion.rst  index.rst  interactions.rst  kernel.rst  latexmkrc  misc.rst  upload-docs.sh
doc/media/: l-expn.eps  l-expn.ipe  local-expansion.ipe  m2m-l2l-translation.eps  m2m-translation.ipe
exafmm/: expansion.py  kernel_common.py  m2m.py  m2p.py  p2m.py  p2p.py  tools.py
exafmm/symbolic/: __init__.py  codegen.py
examples/: check_m2m.py  coeff-scaling-experiment.py  cost-model-sumpy-fused.py  curve-pot.py  curve.py  expansion-toys.py  fourier.py  heat-local.py  heat-mpole.py  heat-toys.py  m2l-timing.py  sym-exp-complexity.py
notes/: .gitignore  expansion-notes.tex  latexmkrc
notes/media/: graf.eps  graf.ipe  l-expn.eps  m-expn.eps  m-expn.ipe  m2l-translation.eps  m2l-translation.ipe  m2m-l2l-translation.eps  m2m-l2l-translation.ipe  m2m-translation.eps  multipole.ipe
read-only-dump/: fmm2.py
rio/: Makefile  kernel.c  nbody.cl  nbody.cxx  step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  tree.c  tree.cu
sumpy/: __init__.py  array_context.py  assignment_collection.py  codegen.py  cse.py  derivative_taker.py  distributed.py  e2e.py  e2p.py  expansion.py  fmm.py  fmm2.py  hank103.py  kernel.py  kernel_common.py  kernel_rewrite.py  layerpot.py  local_expansion.py  m2m.py  m2p.py  p2e.py  p2m.py  p2p.py  point_calculus.py  qbx.py  quack.py  recurrence.py  recurrence_grid.py  recurrence_qbx.py  recurrence_qbx_old.py  recurrenceqbx.py  symbolic.py  tools.py  toys.py  tree.py  tree.pyx  typing.py  version.py  visualization.py
sumpy/expansion/: __init__.py  diff_op.py  level_to_order.py  local.py  loopy.py  m2l.py  multipole.py  pde.py  pde_utils.py
sumpy/symbolic/: __init__.py  codegen.py
sumpy/test/: coeff_test_tools.py  curve.py  geometries.py  test_codegen.py  test_cse.py  test_distributed.py  test_fmm.py  test_heat_translations.py  test_kernel_rewrite.py  test_kernels.py  test_l2l_coeffs.py  test_m2m.py  test_m2m_coeffs.py  test_matrixgen.py  test_misc.py  test_qbmax_line_expansion.py  test_qbx.py  test_recurrence.py  test_recurrence_qbx.py  test_target_deriv.py  test_tools.py
sumpy/transform/: metadata.py
test/: biharmonic.ipynb  count_flops.ipynb  gridfree_taylor_recurrence.ipynb  investigate_normal.py  investigate_normal_recurrence copy.ipynb  investigate_normal_recurrence.ipynb  modified_recur.ipynb  playground.ipynb  plot_normal_recurrence.ipynb  plot_taylor_recurrence.ipynb  plotting copy.py  plotting.py  taylor_recurrence.ipynb  test_codegen.py  test_cse.py  test_directionaltargetderivative.py  test_distributed.py  test_eigenvalues.ipynb  test_fmm.py  test_kernels.py  test_m2m.py  test_matrixgen.py  test_misc.py  test_qbmax_line_expansion.py  test_qbx.py  test_recurrence.py  test_recurrence_qbx.py  test_recurrenceqbx.py  test_tools.py  test_tree.py  testing_pde_to_ode.ipynb
